--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -21,8 +21,8 @@ spring:
   mail:
     host: smtp.gmail.com
     port: 587
-    username: a79690645@gmail.com
-    password: ggcfbvjtwlifbwwz
+    username: nb4news@gmail.com
+    password: xuzkxvdmeeaxdtiw
     properties:
       mail:
         smtp:
