some tests and refactoring

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -28,6 +28,8 @@ spring:
           auth: true
           starttls:
             enable: true
+  liquibase:
+    enabled: false
 server:
   error:
     include-message: always
