--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,11 @@
             <version>5.7.3</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
