--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,8 +15,10 @@ spring:
         default_batch_fetch_size: 100
         jdbc:
           batch_size: 100
-    generate-ddl: true
     open-in-view: false
+    generate-ddl: true
+    hibernate:
+      ddl-auto: validate
   mail:
     host: smtp.gmail.com
     port: 587
@@ -29,7 +31,7 @@ spring:
           starttls:
             enable: true
   liquibase:
-    enabled: false
+    enabled: true
 server:
   error:
     include-message: always
