--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -24,7 +24,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: nb4news@gmail.com
-    password: xuzkxvdmeeaxdtiw
+    password: itccrpxswlfanbda
     properties:
       mail:
         smtp:
