--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,8 +3,8 @@ spring:
     username: user
     password: password
     driver-class-name: org.postgresql.Driver
-#    url: jdbc:postgresql://localhost:5432/nbanews
-    url: jdbc:postgresql://postgresql:5432/nbanews
+    url: jdbc:postgresql://localhost:5432/nbanews
+#    url: jdbc:postgresql://postgresql:5432/nbanews
   h2:
     console:
       enabled: true
@@ -24,7 +24,7 @@ spring:
     host: smtp.gmail.com
     port: 587
     username: nb4news@gmail.com
-    password: itccrpxswlfanbda
+    password: tvydgzdkbzvuqpzy
     properties:
       mail:
         smtp:
