--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,7 +19,7 @@ spring:
     open-in-view: false
     generate-ddl: true
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create
   mail:
     host: smtp.gmail.com
     port: 587
@@ -32,7 +32,7 @@ spring:
           starttls:
             enable: true
   liquibase:
-    enabled: true
+    enabled: false
 server:
   error:
     include-message: always
