--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,9 +17,9 @@ spring:
         jdbc:
           batch_size: 100
     open-in-view: false
-    generate-ddl: true
+    generate-ddl: false
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
   mail:
     host: smtp.gmail.com
     port: 587
@@ -32,7 +32,7 @@ spring:
           starttls:
             enable: true
   liquibase:
-    enabled: false
+    enabled: true
 server:
   error:
     include-message: always
